--- a/tabbycat/motions/locale/ja/LC_MESSAGES/django.po
+++ b/tabbycat/motions/locale/ja/LC_MESSAGES/django.po
@@ -12,7 +12,7 @@ msgstr ""
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -21,63 +21,65 @@ msgstr ""
 #: motions/apps.py:7 motions/templates/public_motions.html:4
 #: motions/templates/public_motions.html:5
 msgid "Motions"
-msgstr ""
+msgstr "モーション"
 
 #: motions/models.py:9
 msgid "sequence number"
-msgstr ""
+msgstr "連番"
 
 #: motions/models.py:10
 msgid "The order in which motions are displayed"
-msgstr ""
+msgstr "モーションが表示される順序"
 
 #: motions/models.py:12
 msgid "text"
-msgstr ""
+msgstr "テキスト"
 
 #: motions/models.py:13
 msgid "The full motion e.g., \"This House would straighten all bananas\""
-msgstr ""
+msgstr "モーション全文 例：「死刑制度を廃止する」"
 
 #: motions/models.py:15
 msgid "reference"
-msgstr ""
+msgstr "リファレンス"
 
 #: motions/models.py:16
 msgid "Shortcode for the motion, e.g., \"Bananas\""
-msgstr ""
+msgstr "そのモーションの略称 例：「死刑」"
 
 #: motions/models.py:18
 msgid "info slide"
-msgstr ""
+msgstr "インフォスライド"
 
 #: motions/models.py:19
 msgid "The information slide for this topic; if it has one"
-msgstr ""
+msgstr "この題目に関する背景等の情報（任意）"
 
 #: motions/models.py:21
 msgid "flagged"
-msgstr ""
+msgstr "フラグ"
 
 #: motions/models.py:22
 msgid "For WADL: Allows for particular motions to be flagged as contentious"
 msgstr ""
+"宗教上もしくはイデオロギー上の理由で特定の参加者がディベートを行わない"
+"モーション（WADL用）"
 
 #: motions/models.py:24
 msgid "round"
-msgstr ""
+msgstr "ラウンド"
 
 #: motions/models.py:26
 msgid "divisions"
-msgstr ""
+msgstr "ディビジョン"
 
 #: motions/models.py:30 motions/models.py:42
 msgid "motion"
-msgstr ""
+msgstr "モーション"
 
 #: motions/models.py:31
 msgid "motions"
-msgstr ""
+msgstr "モーション"
 
 #: motions/models.py:40
 msgid "debate team"
@@ -117,11 +119,11 @@ msgstr ""
 
 #: motions/templates/balance_results_bp.html:25
 msgid "average points per position"
-msgstr ""
+msgstr "ポジションごとの平均点"
 
 #: motions/templates/balance_results_bp.html:55
 msgid "results distribution"
-msgstr ""
+msgstr "結果分布"
 
 #: motions/templates/balance_results_bp.html:68
 msgid "No results for this topic"
@@ -185,30 +187,30 @@ msgstr[1] ""
 
 #: motions/templates/show.html:40
 msgid "There are no motions for this round entered into Tabbycat."
-msgstr ""
+msgstr "このラウンドのモーションはTabbycatに入力されていません。"
 
 #: motions/views.py:95
 msgid "The motion has been saved."
-msgstr ""
+msgstr "モーションが保存されました。"
 
 #: motions/views.py:97
 #, python-format
 msgid "%(count)d motion has been saved."
 msgid_plural "%(count)d motions have been saved."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "%(count)dつのモーションが保存されました。"
+msgstr[1] "%(count)dつのモーションが保存されました。"
 
 #: motions/views.py:102
 #, python-format
 msgid "%(count)d motion has been deleted."
 msgid_plural "%(count)d motions have been deleted."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "%(count)dつのモーションが削除されました。"
+msgstr[1] "%(count)dつのモーションが削除されました。"
 
 #: motions/views.py:143
 msgid "Released the motion(s)."
-msgstr ""
+msgstr "リリース済のモーション"
 
 #: motions/views.py:150
 msgid "Unreleased the motion(s)."
-msgstr ""
+msgstr "未リリースのモーション"
